# mebipenny

./: 21.js  21.txt  README.md  chromakey.js  chromakey.txt  claw.js  fibs.js  fibs.txt  lib.js  package.json  pastebin.js  permute.js  permute.txt  roads.js  roads.txt  simplehttp.js  spelunk.js  spelunk.txt  wormholes.js
archive/: post.coffee  wormholes.js
claw/: index.coffee  test.txt
fib/: run.coffee
haskell/: LICENSE  penny.cabal
haskell/2011/: HexCode.hs  Roads.hs  Spelunking.hs
haskell/2012/: BiologicalEntropy.hs  CallMeMaybe.hs  Chromakey.hs  ClearingTheWay.hs  CountingWithCeasar.hs  DizzyLetters.hs  DizzyLetters2.hs  JTSDilemma.hs  JTSDilemma2.hs  KylesKitchen.hs  PandaEscape.hs  Penlepants.hs  Problem21.hs  ReductioAdEgyptium.hs  Sportsball.hs  test.txt
haskell/2012/final/: Actions.hs  Main.hs
haskell/2012/final/Types/: Game.hs  Move.hs  NewGameRequest.hs
haskell/2015/: CrabCanon.hs  FantasticFour.hs  FiatCurrency.hs  FizzBuzz.hs  RottenAvocados.hs  RunawayPager.hs  SpiltKetchup.hs  ThePennyFairy.hs  TotallyBetterThanChess.hs  WaterRetentive.hs
haskell/final/: AIExpectimax.hs  Actions.hs  Board.hs  Engine.hs  Main.hs  Solve.hs
haskell/final/Types/: Claim.hs  Game.hs  GameDelta.hs  NewPlayerRequest.hs  Player.hs  Tile.hs
haskell/hackerrank/: DiagonalDifference.hs  GridSearch.hs  PlusMinus.hs  SimpleSum.hs  Staircase.hs  TimeInWords.hs
haskell/src/: Template.hs  Woot  Woot.hi  Woot.hs
haskell/src/Mebipenny/: AIExpectimax.hs  Board.hs  Functions.hs  Grid.hs  IO.hs
haskell/src/Penny/: Grid.hs  Matrix.hs
hexcode/: hexcode.coffee
(+41 files in other folders)
