name:                penny
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-mebipenny#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Hess
maintainer:          seanhess@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable penny
  hs-source-dirs:      2012/final
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       unordered-containers,
                       hashable,
                       QuickCheck,
                       bytestring,
                       text,
                       array,
                       split,
                       vector,
                       aeson,
                       wreq,
                       lens,
                       transformers,
                       http-client,
                       http-types
